Upgrade the Surefire plugin to resolve Java 11 parallel test runs with modulepath (#3832)