@@ -104,4 +104,67 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>parallelTest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>singlejvm</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration combine.self="override">
+                                    <properties>
+                                        <vmHeapSettings>-Xms128m -Xmx1G</vmHeapSettings>
+                                    </properties>
+                                    <!-- the argLine variable is needed for JaCoco -->
+                                    <argLine>
+                                        ${vmHeapSettings}
+                                        ${extraVmArgs}
+                                        ${javaModuleArgs}
+                                        -Dsun.nio.ch.bugLevel
+                                        -ea
+                                        --add-exports java.base/jdk.internal.ref=com.hazelcast.core
+                                        --add-opens java.base/java.nio=com.hazelcast.core
+                                        --add-opens java.base/sun.nio.ch=com.hazelcast.core
+                                        --add-opens java.base/java.lang=com.hazelcast.core
+                                        --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
+                                        --add-opens java.management/sun.management=com.hazelcast.core
+                                        -Dhazelcast.operation.thread.count=16
+                                        -Dhazelcast.hidensity.check.freememory=false
+                                        -Dhazelcast.phone.home.enabled=false
+                                        -Dhazelcast.logging.type=none
+                                        -Dhazelcast.test.use.network=false
+                                        -Dlog4j.skipJansi=true
+                                    </argLine>
+                                    <includes>
+                                        <include>**/**.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/jsr/**.java</exclude>
+                                    </excludes>
+                                    <groups>
+                                        com.hazelcast.test.annotation.QuickTest,
+                                        com.hazelcast.test.modulepath.ModulePathTest
+                                    </groups>
+                                    <excludedGroups>
+                                        com.hazelcast.test.annotation.SlowTest,
+                                        com.hazelcast.test.annotation.NightlyTest,
+                                        com.hazelcast.test.annotation.ParallelJVMTest
+                                    </excludedGroups>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
